TestSuite/PascalABCTests/errors/err0118.pas
uses test in '/////';

begin
end.